# stream_packer_rtl

./: LICENSE  README.md
rtl/banyan/: banyan.sv  sw2.sv
rtl/stream_packer/: steam_packer.sv  steam_packer_core.sv  steam_packer_input.sv  steam_packer_out_fifo.sv  steam_packer_output.sv
rtl/util/: easy_fifo.sv  pingpong_buf.sv  shift_register.sv
syn/: .gitignore  Makefile  synth.tcl
tb/: .gitignore  CMakeLists.txt  run_test.py
